--- a/style.css
+++ b/style.css
@@ -36,11 +36,14 @@ body{
     padding: 10px 15px;
 }
 .body-card h2 {
-    margin: 0; 
+    margin: 15; 
     text-align: center; 
 }
 .body-card img{
     width: 10%;
     display: block;
     margin: auto;
+}
+.body-card span ul{
+    list-style-type: square;
 }
